[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Hazards/BeamSpawnerStraight.gd" type="Script" id=1]

[node name="BeamSpawnerStraight" type="Node2D"]
script = ExtResource( 1 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
